# sv-port-parser

./: .svlint.toml  Cargo.toml  README.md  my_mux.sv  pyproject.toml
src/: lib.rs
